# CarNewt

./: CMakeLists.txt  CMakePresets.json  README.md
example/: Meanings.txt
example/Prototype/: cross.newt  intersection.csv  roads.csv  roads.newt  streets.csv
include/: WindowingEngine.h
include/Engine/: WindowingEngine.h
include/Exceptions/: EngineExceptions.hpp  LoaderExceptions.hpp  MessagedException.hpp  ModelExceptions.hpp
include/Generics/: Identifiable.h
include/Graphics/: Camera2D.h  Drawable.h  IDrawable2D.h  Object2D.h  OneColorVertexHandler2D.h  Shader2D.h  ShaderProgram.h  Vertex2D.hpp  VertexHandler2D.h
include/Graphics/Camera/: Camera2D.h
include/Graphics/Generics/: DisplayedObject.h  IDrawable2D.h  Object2D.h
include/Graphics/Matrix/: MatrixCreator.h
include/Graphics/Shaders/: Shader2D.h  ShaderProgram.h
include/Graphics/Shapes/: Circle.h  Line.h  SimpleShape.h
include/Graphics/Vertex/: OneColorVertexHandler2D.h  VertexHandler2D.h
include/Loader/: CSVProcessor.hpp  NewtLoader.h
include/Roads/: Intersection.h  Road.h  RoadNetwork.h  Street.h
include/Scene/: IScene.hpp  MainMenuScene.h  SceneBase.h  SceneNames.hpp  SimulationScene.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/Engine/: WindowingEngine.cpp
src/Generics/: Identifiable.cpp
src/Graphics/: Camera2D.cpp  MatrixCreator.cpp  Object2D.cpp  OneColorVertexHandler2D.cpp  Shader2D.cpp  ShaderProgram.cpp  VertexHandler2D.cpp
src/Graphics/Camera/: Camera2D.cpp
src/Graphics/Generics/: DisplayedObject.cpp  Object2D.cpp
src/Graphics/Matrix/: MatrixCreator.cpp
src/Graphics/Shaders/: Shader2D.cpp  ShaderProgram.cpp
src/Graphics/Shapes/: Circle.cpp  Line.cpp  SimpleShape.cpp
src/Graphics/Vertex/: OneColorVertexHandler2D.cpp  VertexHandler2D.cpp
src/Loader/: NewtLoader.cpp
src/Main/: main.cpp
src/Roads/: Intersection.cpp  Road.cpp  RoadNetwork.cpp  Street.cpp
src/Scene/: MainMenuScene.cpp  SceneBase.cpp  SimulationScene.cpp
tests/: test_main.cpp
